# WarheadCore_AC_Arhive

./: .gitignore  .restyled.yaml  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  issue_template.md  pull_request_template.md  revision_data.h.in.cmake
modules/: CMakeLists.txt  LoadingModules.cmake  create_module.sh  how_to_make_a_module.md
modules/mod-1v1-arena/: CMakeLists.txt
modules/mod-1v1-arena/conf/: 1v1Arena.conf.dist
modules/mod-1v1-arena/src/: 1v1Arena_SC.cpp  1v1_arena_loader.cpp
modules/mod-anti-ad/: CMakeLists.txt
modules/mod-anti-ad/conf/: AntiAD.conf.dist
modules/mod-anti-ad/src/: AntiAD_SC.cpp  anti_ad_loader.cpp
modules/mod-anticheat/: CMakeLists.txt
modules/mod-anticheat/conf/: Anticheat.conf.dist
modules/mod-anticheat/src/: Anticheat.cpp  Anticheat.h  Anticheat_SC.cpp  anticheat_loader.cpp
modules/mod-arena-reward/: CMakeLists.txt  setup_git_commit_template.sh
modules/mod-arena-reward/conf/: ArenaReward.conf.dist
modules/mod-arena-reward/src/: ArenaReward.cpp  ArenaReward.h  ArenaReward_SC.cpp  arena_reward_loader.cpp
modules/mod-auto-revive/: CMakeLists.txt
modules/mod-auto-revive/conf/: AutoRevive.conf.dist
modules/mod-auto-revive/src/: AutoRevive_SC.cpp  auto_revive_loader.cpp
modules/mod-autobalance/: CMakeLists.txt
modules/mod-autobalance/conf/: AutoBalance.conf.dist
modules/mod-autobalance/src/: AutoBalance.cpp  AutoBalance.h  AutoBalance_SC.cpp  autobalance_loader.cpp
modules/mod-bg-reward/: CMakeLists.txt
modules/mod-bg-reward/conf/: BGReward.conf.dist
modules/mod-bg-reward/src/: BGReward_SC.cpp  bg_reward_loader.cpp
modules/mod-boss-announcer/: CMakeLists.txt
modules/mod-boss-announcer/conf/: BossAnnouncer.conf.dist
modules/mod-boss-announcer/src/: BossAnnouncer_SC.cpp  boss_announcer_loader.cpp
modules/mod-buff-command/: CMakeLists.txt
modules/mod-buff-command/conf/: BuffCommand.conf.dist
modules/mod-buff-command/src/: BuffCommand_SC.cpp  buff_command_loader.cpp
modules/mod-cfbg/: CMakeLists.txt
modules/mod-cfbg/conf/: CFBG.conf.dist
modules/mod-cfbg/src/: CFBG.cpp  CFBG.h  CFBG_SC.cpp  cfbg_loader.cpp
modules/mod-donate-ips/: CMakeLists.txt
modules/mod-donate-ips/conf/: DonateIPS.conf.dist
modules/mod-donate-ips/src/: DonateIPS_SC.cpp  donate_ips_loader.cpp
modules/mod-duel-reset/: CMakeLists.txt
modules/mod-duel-reset/conf/: DuelReset.conf.dist
modules/mod-duel-reset/src/: DuelReset_SC.cpp  duel_reset_loader.cpp
modules/mod-dungeon-buff/: CMakeLists.txt
modules/mod-dungeon-buff/conf/: DungeonBuff.conf.dist
modules/mod-dungeon-buff/src/: DungeonBuff_SC.cpp  dungeon_buff_loader.cpp
modules/mod-event-system/: CMakeLists.txt
modules/mod-event-system/conf/: EventSystem.conf.dist
modules/mod-event-system/src/: EventSystem.cpp  EventSystem.h  EventSystem_SC.cpp  event_system_loader.cpp
modules/mod-external-mail/: CMakeLists.txt
modules/mod-external-mail/conf/: ExternalMail.conf.dist
modules/mod-external-mail/src/: ExternalMail.cpp  ExternalMail.h  ExternalMail_SC.cpp  external_mail_loader.cpp
modules/mod-factions-icons-channel/: CMakeLists.txt
modules/mod-factions-icons-channel/conf/: FactionsIconsChannel.conf.dist
modules/mod-factions-icons-channel/src/: FactionsIconsChannel_SC.cpp  factions_icons_channel_loader.cpp
modules/mod-gm-chat-color/: CMakeLists.txt
modules/mod-gm-chat-color/conf/: GMChatColor.conf.dist
modules/mod-gm-chat-color/src/: GMChatColor_SC.cpp  gm_chat_color_loader.cpp
modules/mod-guild-level-system/: CMakeLists.txt
modules/mod-guild-level-system/conf/: GuildLevelSystem.conf.dist
modules/mod-guild-level-system/src/: GuildLevelSystem.cpp  GuildLevelSystem.h  GuildLevelSystem_SC.cpp  guild_level_system_loader.cpp
modules/mod-item-level-up/: CMakeLists.txt
modules/mod-item-level-up/conf/: ItemLevelUp.conf.dist
modules/mod-item-level-up/src/: ItemLevelUp.h  ItemLevelUp_SC.cpp  item_level_up_loader.cpp
modules/mod-itemlevelup/src/: ItemLevelUp.cpp  ItemLevelUp.h  ItemLevelUp_SC.cpp  itemlevelup_loader.cpp
modules/mod-level-reward/: CMakeLists.txt
modules/mod-level-reward/conf/: LevelReward.conf.dist
modules/mod-level-reward/src/: LevelReward_SC.cpp  level_reward_loader.cpp
modules/mod-notify-muted/: CMakeLists.txt
modules/mod-notify-muted/conf/: NotifyMuted.conf.dist
modules/mod-notify-muted/src/: NotifyMuted_SC.cpp  notify_muted_loader.cpp
modules/mod-online-reward/: CMakeLists.txt
modules/mod-online-reward/conf/: OnlineReward.conf.dist
modules/mod-online-reward/src/: OnlineReward.cpp  OnlineReward.h  OnlineReward_SC.cpp  online_reward_loader.cpp
modules/mod-player-can-get-exp/: CMakeLists.txt
modules/mod-player-can-get-exp/conf/: PlayerCanGetExp.conf.dist
modules/mod-player-can-get-exp/src/: PlayerCanGetExp_SC.cpp  player_can_get_exp_loader.cpp
modules/mod-player-info-at-login/: CMakeLists.txt
modules/mod-player-info-at-login/conf/: PlayerInfoAtLogin.conf.dist
modules/mod-player-info-at-login/src/: PlayerInfoAtLogin_SC.cpp  player_info_at_login_loader.cpp
modules/mod-quest-buff/: CMakeLists.txt
modules/mod-quest-buff/conf/: QuestBuff.conf.dist
modules/mod-transmogrification/: CMakeLists.txt  README.md
modules/mod-unbind-instance/: CMakeLists.txt
src/: CMakeLists.txt
src/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist  authserver.rc  resource.h
src/cmake/: ac_macros.cmake  genrev.cmake  revision.h.in.cmake  showoptions.cmake
src/cmake/macros/: AutoCollect.cmake  (+9 more)
src/common/: AutoPtr.h  Banner.cpp  Banner.h  CMakeLists.txt  ClusterDefines.h  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h  LoginHolderEnum.h  Logo.cpp  Logo.h  OpcodeDefines.hpp  OpcodeTable.hpp
src/database/: CMakeLists.txt
src/game/: CMakeLists.txt
src/genrev/: CMakeLists.txt
src/scripts/: CMakeLists.txt  ScriptLoader.cpp.in.cmake
src/server/: CMakeLists.txt
src/shared/: CMakeLists.txt  SharedDefines.h  enuminfo_SharedDefines.cpp
src/tools/: CMakeLists.txt
src/worldserver/: CMakeLists.txt  Main.cpp  worldserver.conf.dist  worldserver.rc
(+2108 files in other folders)
